chore: Add VggNet16 to transfer learning notebook

--- a/notebook/10_transfer_learning/01_.ipynb
+++ b/notebook/10_transfer_learning/01_.ipynb
@@ -962,7 +962,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Load State of The Art Models And Fine-tune The Model. "
+    "## Load State of The Art Models And Fine-tune The Model.\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "### 1. ResNet"
    ]
   },
   {
@@ -1588,31 +1592,87 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 35,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "10"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "num_classes"
+    "<hr><br>\n",
+    "\n",
+    "### 2. VggNet (Visual Geometry Group Network)\n",
+    "\n",
+    "```text\n",
+    "- The model size is ~600MB so I won't download the pre-trained model.\n",
+    "- I also will NOT fine-tune the model due to the model size.\n",
+    "- The code below is a code snippet on how to fine-tune the model.\n",
+    "```\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "```python\n",
+    "# ==== Note ====:\n",
+    "# The model size is ~600MB so I won't download the pre-trained model.\n",
+    "vggnet = models.vgg16(pretrained=True)\n",
+    "vggnet\n",
+    "\n",
+    "# The last fully connected layer\n",
+    "vggnet.classifier[6].in_features\n",
+    "\n",
+    "# Define transfer learning class\n",
+    "class TransferLearningModel(nn.Module):\n",
+    "    \"\"\"This is used to load the pre-trained VggNet model.\"\"\"\n",
+    "\n",
+    "    def __init__(self, num_classes: int) -> None:\n",
+    "        super().__init__()\n",
+    "        self.model = models.vgg16(pretrained=True)\n",
+    "\n",
+    "        # Freeze all the layers in the pre-trained model\n",
+    "        for param in self.model.parameters():\n",
+    "            param.requires_grad = False\n",
+    "\n",
+    "        # Modify the last fully connected layer for the new task (classification)\n",
+    "        in_features = self.model.classifier[6].in_features\n",
+    "        self.model.classifier[6] = nn.Linear(\n",
+    "            in_features=in_features, out_features=num_classes\n",
+    "        )\n",
+    "\n",
+    "    def forward(self, x: torch.Tensor) -> torch.Tensor:\n",
+    "        \"\"\"This performs the forward propagation.\"\"\"\n",
+    "        return self.model(x)\n",
+    "\n",
+    "def main():\n",
+    "    \"\"\"This is the main function.\"\"\"\n",
+    "    # Device configuration\n",
+    "    device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "\n",
+    "    # If we're on a CUDA machine, this should print a CUDA device:\n",
+    "    print(f\"Working on device={device!r}\")\n",
+    "\n",
+    "    # ==== Init model ====\n",
+    "    model = TransferLearningModel(num_classes=num_classes).to(device=device)\n",
+    "\n",
+    "    # ==== Define loss function and optimizer ====\n",
+    "    criterion = nn.CrossEntropyLoss()\n",
+    "    optimizer = torch.optim.Adam(params=model.parameters(), lr=learning_rate)\n",
+    "\n",
+    "    # ==== Train the model ====\n",
+    "    model = train_transfer_learning(\n",
+    "        model,\n",
+    "        device=device,\n",
+    "        train_loader=train_loader_stl_10,\n",
+    "        val_loader=val_loader_stl_10,\n",
+    "        criterion=criterion,\n",
+    "        optimizer=optimizer,\n",
+    "        num_epochs=num_epochs,\n",
+    "    )\n",
+    "\n",
+    "    # ==== Evaluate the model ====\n",
+    "    test(model, device=device, test_loader=test_loader_stl_10)\n",
+    "    return model\n",
+    "\n",
+    "    \n",
+    "# ==== Fine-tune the model ====\n",
+    "main()\n",
+    "```"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
