chore: Update ANN notes

--- a/notebook/04_regularization/01_dropout.ipynb
+++ b/notebook/04_regularization/01_dropout.ipynb
@@ -192,7 +192,7 @@
     "F.dropout(\n",
     "    p=prob,\n",
     "    input=X,\n",
-    "    training=False,  # apply dropout if is True\n",
+    "    training=False,  # apply dropout if it is True\n",
     ")"
    ]
   },
