chore: Add PyTorch Lighning Workflow

--- a/notebook/06_FFN/01-lab.ipynb
+++ b/notebook/06_FFN/01-lab.ipynb
@@ -1066,7 +1066,97 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# NEW !!!\n",
+    "\n",
+    "\n",
+    "class MNISTDataModule(L.LightningDataModule):\n",
+    "    def __init__(self, data_dir=\"./mnist\", batch_size=64):\n",
+    "        super().__init__()\n",
+    "        self.data_dir = data_dir\n",
+    "        self.batch_size = batch_size\n",
+    "\n",
+    "    def prepare_data(self):\n",
+    "        # download\n",
+    "        datasets.MNIST(self.data_dir, train=True, download=True)\n",
+    "        datasets.MNIST(self.data_dir, train=False, download=True)\n",
+    "\n",
+    "    def setup(self, stage: str):\n",
+    "        self.mnist_test = datasets.MNIST(\n",
+    "            self.data_dir, transform=transforms.ToTensor(), train=False\n",
+    "        )\n",
+    "        self.mnist_predict = datasets.MNIST(\n",
+    "            self.data_dir, transform=transforms.ToTensor(), train=False\n",
+    "        )\n",
+    "        mnist_full = datasets.MNIST(\n",
+    "            self.data_dir, transform=transforms.ToTensor(), train=True\n",
+    "        )\n",
+    "        self.mnist_train, self.mnist_val = random_split(mnist_full, [55000, 5000], generator=torch.Generator().manual_seed(42))\n",
+    "\n",
+    "    def train_dataloader(self):\n",
+    "        return DataLoader(\n",
+    "            self.mnist_train, batch_size=self.batch_size, shuffle=True, drop_last=True\n",
+    "        )\n",
+    "\n",
+    "    def val_dataloader(self):\n",
+    "        return DataLoader(self.mnist_val, batch_size=self.batch_size, shuffle=False)\n",
+    "\n",
+    "    def test_dataloader(self):\n",
+    "        return DataLoader(self.mnist_test, batch_size=self.batch_size, shuffle=False)\n",
+    "\n",
+    "    def predict_dataloader(self):\n",
+    "        return DataLoader(self.mnist_predict, batch_size=self.batch_size, shuffle=False)\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Unit 5.5. Organizing Your Data Loaders with Data Modules\n",
+    "\n",
+    "import lightning as L\n",
+    "import torch\n",
+    "from shared_utilities import LightningModel, MNISTDataModule, PyTorchMLP\n",
+    "from watermark import watermark\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "\n",
+    "    print(watermark(packages=\"torch,lightning\", python=True))\n",
+    "    print(\"Torch CUDA available?\", torch.cuda.is_available())\n",
+    "\n",
+    "    torch.manual_seed(123)\n",
+    "\n",
+    "    # NEW !!!\n",
+    "    dm = MNISTDataModule()\n",
+    "\n",
+    "    pytorch_model = PyTorchMLP(num_features=784, num_classes=10)\n",
+    "\n",
+    "    lightning_model = LightningModel(model=pytorch_model, learning_rate=0.05)\n",
+    "\n",
+    "    trainer = L.Trainer(\n",
+    "        max_epochs=10, accelerator=\"cpu\", devices=\"auto\", deterministic=True\n",
+    "    )\n",
+    "\n",
+    "    # NEW !!!\n",
+    "    # trainer.fit(model=lightning_model,\n",
+    "    #             train_dataloaders=train_loader, val_dataloaders=val_loader)\n",
+    "    trainer.fit(model=lightning_model, datamodule=dm)\n",
+    "\n",
+    "    train_acc = trainer.validate(dataloaders=dm.train_dataloader())[0][\"val_acc\"]\n",
+    "    val_acc = trainer.validate(datamodule=dm)[0][\"val_acc\"]\n",
+    "    test_acc = trainer.test(datamodule=dm)[0][\"test_acc\"]\n",
+    "    print(\n",
+    "        f\"Train Acc {train_acc*100:.2f}%\"\n",
+    "        f\" | Val Acc {val_acc*100:.2f}%\"\n",
+    "        f\" | Test Acc {test_acc*100:.2f}%\"\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "PATH = \"lightning.pt\"\n",
+    "torch.save(pytorch_model.state_dict(), PATH)\n",
+    "\n",
+    "# To load model:\n",
+    "# model = PyTorchMLP(num_features=784, num_classes=10)\n",
+    "# model.load_state_dict(torch.load(PATH))\n",
+    "# model.eval()\n"
+   ]
   }
  ],
  "metadata": {
