chore: Add Ray Python

--- a/notebook/PyTorchLightning/01-mnist.ipynb
+++ b/notebook/PyTorchLightning/01-mnist.ipynb
@@ -2128,10 +2128,9 @@
     "# === NEW ===\n",
     "trainer.fit(model=lightning_model, datamodule=data_module)\n",
     "\n",
-    "\n",
-    "train_acc = trainer.test(dataloaders=train_loader, verbose=True)[0][\"accuracy\"]\n",
-    "val_acc = trainer.test(dataloaders=val_loader, verbose=True)[0][\"accuracy\"]\n",
-    "test_acc = trainer.test(dataloaders=test_loader, verbose=True)[0][\"accuracy\"]\n",
+    "train_acc = trainer.test(dataloaders=data_module.train_dataloader())[0][\"accuracy\"]\n",
+    "val_acc = trainer.test(dataloaders=data_module.val_dataloader())[0][\"accuracy\"]\n",
+    "test_acc = trainer.test(dataloaders=data_module.test_dataloader())[0][\"accuracy\"]\n",
     "\n",
     "\n",
     "print(\n",
