--- a/notebook/PyTorchLightning/02-logging.ipynb
+++ b/notebook/PyTorchLightning/02-logging.ipynb
@@ -187,7 +187,6 @@
     "        self.train_acc = torchmetrics.Accuracy(task=\"multiclass\", num_classes=10)\n",
     "        self.val_acc = torchmetrics.Accuracy(task=\"multiclass\", num_classes=10)\n",
     "\n",
-    "        # === NEW! ===\n",
     "        # Set up attributes for computing test accuracy\n",
     "        self.test_acc = torchmetrics.Accuracy(task=\"multiclass\", num_classes=10)\n",
     "        # Save settings and hyperparameters to the log directory\n",
@@ -197,7 +196,9 @@
     "    def forward(self, x: torch.Tensor) -> torch.Tensor:\n",
     "        return self.model(x)\n",
     "\n",
-    "    def _shared_step(self, batch: int) -> tuple[torch.Tensor, torch.Tensor, torch.Tensor]:\n",
+    "    def _shared_step(\n",
+    "        self, batch: int\n",
+    "    ) -> tuple[torch.Tensor, torch.Tensor, torch.Tensor]:\n",
     "        # Fetch the data\n",
     "        features, true_labels = batch\n",
     "        # Forward prop\n",
@@ -214,7 +215,9 @@
     "\n",
     "        self.log(\"train_loss\", loss)\n",
     "        self.train_acc(predicted_labels, true_labels)\n",
-    "        self.log(\"train_acc\", self.train_acc, on_step=False, on_epoch=True, prog_bar=True)\n",
+    "        self.log(\n",
+    "            \"train_acc\", self.train_acc, on_step=False, on_epoch=True, prog_bar=True\n",
+    "        )\n",
     "        return loss\n",
     "\n",
     "    def validation_step(self, batch: int, batch_idx: int) -> None:\n",
@@ -267,7 +270,9 @@
     "        self.mnist_predict = datasets.MNIST(\n",
     "            self.data_dir, transform=transforms.ToTensor(), train=False\n",
     "        )\n",
-    "        mnist_full = datasets.MNIST(self.data_dir, transform=transforms.ToTensor(), train=True)\n",
+    "        mnist_full = datasets.MNIST(\n",
+    "            self.data_dir, transform=transforms.ToTensor(), train=True\n",
+    "        )\n",
     "        self.mnist_train, self.mnist_val = random_split(\n",
     "            mnist_full,\n",
     "            [55_000, 5_000],\n",
@@ -324,7 +329,6 @@
       "TPU available: False, using: 0 TPU cores\n",
       "IPU available: False, using: 0 IPUs\n",
       "HPU available: False, using: 0 HPUs\n",
-      "Missing logger folder: logs/mnist-model\n",
       "\n",
       "  | Name      | Type               | Params\n",
       "-------------------------------------------------\n",
@@ -342,7 +346,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7e360c716c3c4b11a0d49eb538576c82",
+       "model_id": "7fe319029bb24f75b214c9368b1e384b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -356,7 +360,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f0496181c2234b6dbf28c7645ef0ae1c",
+       "model_id": "fd1eb36f15e94f1cbf7547fc15eadddf",
        "version_major": 2,
        "version_minor": 0
       },
@@ -370,7 +374,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3c4dcd54836941cb9b5ab4ba6cec88f3",
+       "model_id": "88e77c4e44d142f0b8bdaef2565396ec",
        "version_major": 2,
        "version_minor": 0
       },
@@ -384,7 +388,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f2f9d0bdb58540bf97f1ce668107bbeb",
+       "model_id": "ab981aa2496342feabba1eeb6ead7535",
        "version_major": 2,
        "version_minor": 0
       },
@@ -398,7 +402,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f28ad1c1b6314c31894bce64ebe2ada2",
+       "model_id": "1f31cf22c94d4ba2bf7a1c7e7fa8d53c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -412,7 +416,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8683c33af19c4ed293941d103c1aa857",
+       "model_id": "c9e69aaa77a24ab09d0cdb9bd8a23559",
        "version_major": 2,
        "version_minor": 0
       },
@@ -426,7 +430,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "47e8cd4a386043af88cadd420e166791",
+       "model_id": "3f7e5fca4ad944ceba6e83ee995d5c7c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -440,7 +444,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e17a78bb95bc47bfa05cf676af2bd7c5",
+       "model_id": "4d62250d2bb44013a0686352692efe81",
        "version_major": 2,
        "version_minor": 0
       },
@@ -454,7 +458,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cd1e018f9832404982eeefcc15c17b59",
+       "model_id": "840678fd8cde46a59f6eca2922eb6704",
        "version_major": 2,
        "version_minor": 0
       },
@@ -468,7 +472,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a2b5a4b3d1444281b088c6db947f0ecf",
+       "model_id": "b6ec797092124eb9b2b9af2c4b07a61c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -482,7 +486,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d8ef6f805f5c4c0bb90e4024114c7238",
+       "model_id": "99052422f1454654b8c79e082d184e67",
        "version_major": 2,
        "version_minor": 0
       },
@@ -496,7 +500,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "433cc8234a3541d39506cd313c84bba3",
+       "model_id": "280969b74662463183a97ea14fe5ca93",
        "version_major": 2,
        "version_minor": 0
       },
@@ -512,14 +516,14 @@
      "output_type": "stream",
      "text": [
       "`Trainer.fit` stopped: `max_epochs=10` reached.\n",
-      "Restoring states from the checkpoint path at logs/mnist-model/version_0/checkpoints/epoch=9-step=8590.ckpt\n",
-      "Loaded model weights from the checkpoint at logs/mnist-model/version_0/checkpoints/epoch=9-step=8590.ckpt\n"
+      "Restoring states from the checkpoint path at logs/mnist-model/version_1/checkpoints/epoch=9-step=8590.ckpt\n",
+      "Loaded model weights from the checkpoint at logs/mnist-model/version_1/checkpoints/epoch=9-step=8590.ckpt\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a2e6f22a06c94c9fad1fe4d807b82d12",
+       "model_id": "9d1135764e124da594522ad583688aa8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -555,14 +559,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Restoring states from the checkpoint path at logs/mnist-model/version_0/checkpoints/epoch=9-step=8590.ckpt\n",
-      "Loaded model weights from the checkpoint at logs/mnist-model/version_0/checkpoints/epoch=9-step=8590.ckpt\n"
+      "Restoring states from the checkpoint path at logs/mnist-model/version_1/checkpoints/epoch=9-step=8590.ckpt\n",
+      "Loaded model weights from the checkpoint at logs/mnist-model/version_1/checkpoints/epoch=9-step=8590.ckpt\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "567c947e30ae45cb8d17e59b28ceaad3",
+       "model_id": "80481db47df040d687174612688a0984",
        "version_major": 2,
        "version_minor": 0
       },
@@ -579,7 +583,7 @@
        "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">┏━━━━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━━━━━━━━━┓\n",
        "┃<span style=\"font-weight: bold\">        Test metric        </span>┃<span style=\"font-weight: bold\">       DataLoader 0        </span>┃\n",
        "┡━━━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━━━━┩\n",
-       "│<span style=\"color: #008080; text-decoration-color: #008080\">         accuracy          </span>│<span style=\"color: #800080; text-decoration-color: #800080\">     0.910099983215332     </span>│\n",
+       "│<span style=\"color: #008080; text-decoration-color: #008080\">         accuracy          </span>│<span style=\"color: #800080; text-decoration-color: #800080\">    0.9067999720573425     </span>│\n",
        "└───────────────────────────┴───────────────────────────┘\n",
        "</pre>\n"
       ],
@@ -587,7 +591,7 @@
        "┏━━━━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━━━━━━━━━┓\n",
        "┃\u001b[1m \u001b[0m\u001b[1m       Test metric       \u001b[0m\u001b[1m \u001b[0m┃\u001b[1m \u001b[0m\u001b[1m      DataLoader 0       \u001b[0m\u001b[1m \u001b[0m┃\n",
        "┡━━━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━━━━┩\n",
-       "│\u001b[36m \u001b[0m\u001b[36m        accuracy         \u001b[0m\u001b[36m \u001b[0m│\u001b[35m \u001b[0m\u001b[35m    0.910099983215332    \u001b[0m\u001b[35m \u001b[0m│\n",
+       "│\u001b[36m \u001b[0m\u001b[36m        accuracy         \u001b[0m\u001b[36m \u001b[0m│\u001b[35m \u001b[0m\u001b[35m   0.9067999720573425    \u001b[0m\u001b[35m \u001b[0m│\n",
        "└───────────────────────────┴───────────────────────────┘\n"
       ]
      },
@@ -598,14 +602,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Restoring states from the checkpoint path at logs/mnist-model/version_0/checkpoints/epoch=9-step=8590.ckpt\n",
-      "Loaded model weights from the checkpoint at logs/mnist-model/version_0/checkpoints/epoch=9-step=8590.ckpt\n"
+      "Restoring states from the checkpoint path at logs/mnist-model/version_1/checkpoints/epoch=9-step=8590.ckpt\n",
+      "Loaded model weights from the checkpoint at logs/mnist-model/version_1/checkpoints/epoch=9-step=8590.ckpt\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f5f1e556c88f485696f83955b28d1062",
+       "model_id": "bfffcaf02b8f48cfbfcc5ecb273e40a8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -641,7 +645,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Acc 91.05% | Val Acc 91.01% | Test Acc 91.01%\n"
+      "Train Acc 91.05% | Val Acc 90.68% | Test Acc 91.01%\n"
      ]
     }
    ],
@@ -667,8 +671,8 @@
     "trainer.fit(model=lightning_model, datamodule=data_module)\n",
     "\n",
     "train_acc = trainer.test(dataloaders=data_module.train_dataloader())[0][\"accuracy\"]\n",
-    "val_acc = trainer.test(dataloaders=data_module)[0][\"accuracy\"]\n",
-    "test_acc = trainer.test(dataloaders=data_module)[0][\"accuracy\"]\n",
+    "val_acc = trainer.test(dataloaders=data_module.val_dataloader())[0][\"accuracy\"]\n",
+    "test_acc = trainer.test(dataloaders=data_module.test_dataloader())[0][\"accuracy\"]\n",
     "\n",
     "print(\n",
     "    f\"Train Acc {train_acc*100:.2f}%\"\n",
@@ -735,7 +739,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5570e1fe30e648c2920341e125547534",
+       "model_id": "d63d09055e29408aacbed591e839592c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -749,7 +753,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3aeb1d827c4446a8b8e3e40bdfa985bf",
+       "model_id": "5371e640d0a344e28801be07a7a58838",
        "version_major": 2,
        "version_minor": 0
       },
@@ -763,7 +767,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2eb3ba97d5a04b7c811325c375918afc",
+       "model_id": "b4f5f9c3cb5144cda9281cbe762870ef",
        "version_major": 2,
        "version_minor": 0
       },
@@ -777,7 +781,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "067701561fd84440b488a065a8fc1c0a",
+       "model_id": "b41bc10e07a04caa90e351715e1b5920",
        "version_major": 2,
        "version_minor": 0
       },
@@ -791,7 +795,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "61b52b4ca0dd4cdf90b02f3cabf33f11",
+       "model_id": "ab0e680c4fd648b9ad4d4628a8955dd3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -805,7 +809,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a1962f9f81fc4a618892de64dfcfc9be",
+       "model_id": "eb6791b91b264b11b4926b6161a8c710",
        "version_major": 2,
        "version_minor": 0
       },
@@ -819,7 +823,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3b39b829fe3f442ba536d4dc545110ac",
+       "model_id": "cc4e4c95dfb7488ba7f36d01a0ca49e2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -833,7 +837,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dfee2a3059e4447186242b60324f9c97",
+       "model_id": "2088e5b3b174474da147a06ace1c6087",
        "version_major": 2,
        "version_minor": 0
       },
@@ -847,7 +851,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dc0e94dcc0f54753b6fec349d890cc6d",
+       "model_id": "81e04145c17147ceb37422cdb6d38a0d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -861,7 +865,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fb93088906824e529882fd252420dcd4",
+       "model_id": "26f85d2c5165404d820157c99218114c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -875,7 +879,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7e2c5897fcbe4321a6113e9e00e02735",
+       "model_id": "b6c9171ef6eb43528b9cc46234827686",
        "version_major": 2,
        "version_minor": 0
       },
@@ -889,7 +893,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0c4f94c8658d48a79e1d5f00ee206977",
+       "model_id": "0440e4236a814a70b98f91195c1e8924",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1010,6 +1014,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#\n",
     "data_module = MNISTDataModule()\n",
     "data_module.setup(stage=\"test\")"
    ]
@@ -1074,15 +1079,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
    "outputs": [
@@ -1136,7 +1132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1174,6 +1170,13 @@
     "plt.xticks(rotation=45, ha=\"right\", rotation_mode=\"anchor\")\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
