chore: Add Ray deployment

--- a/notebook/Ray/01-getting_started.ipynb
+++ b/notebook/Ray/01-getting_started.ipynb
@@ -319,21 +319,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "ray job submit --address http://localhost:<dashboard-port> --working-dir . -- python my_script.py"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "RAY_ADDRESS='http://10.154.0.26:8265' ray job submit --working-dir . -- python deploy.py"
+   ]
   },
   {
    "cell_type": "code",
