--- a/notebook/Ray/01-getting_started.ipynb
+++ b/notebook/Ray/01-getting_started.ipynb
@@ -305,7 +305,67 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import time\n",
+    "\n",
+    "\n",
+    "def load_model():\n",
+    "    # A dummy model.\n",
+    "    def model(batch: pd.DataFrame) -> pd.DataFrame:\n",
+    "\n",
+    "        # Dummy payload so copying the model will actually copy some data\n",
+    "        # across nodes.\n",
+    "        model.payload = np.zeros(10)\n",
+    "        time.sleep(2)\n",
+    "        return pd.DataFrame({\"default\": batch[\"passenger_count\"] % 2 == 0})\n",
+    "\n",
+    "    return model\n",
+    "\n",
+    "# Load data\n",
+    "\n",
+    "np.random.seed(42)\n",
+    "input_df_1: pd.DataFrame = pd.DataFrame(\n",
+    "    {\"passenger_count\": np.random.choice(a=np.arange(1, 10), size=50_000)}\n",
+    ")\n",
+    "input_df_2: pd.DataFrame = pd.DataFrame(\n",
+    "    {\"passenger_count\": np.random.choice(a=np.arange(2, 9), size=55_000)}\n",
+    ")\n",
+    "input_df_1.head()\n",
+    "\n",
+    "\n",
+    "import ray\n",
+    "\n",
+    "\n",
+    "@ray.remote(num_cpus=2, max_retries=2)\n",
+    "def make_prediction(model, data: pd.DataFrame):\n",
+    "    result = model(data)\n",
+    "\n",
+    "    return result.shape\n",
+    "\n",
+    "\n",
+    "# ray.put() the model just once to local object store, and then pass the\n",
+    "# reference to the remote tasks.\n",
+    "model = load_model()\n",
+    "model_ref = ray.put(model)\n",
+    "\n",
+    "result_refs = []\n",
+    "\n",
+    "# Launch all prediction tasks.\n",
+    "for data in [input_df_1, input_df_2]:\n",
+    "    # Launch a prediction task by passing model reference and the data to it.\n",
+    "    # NOTE: it would be highly inefficient if you are passing the model itself\n",
+    "    # like make_prediction.remote(model, data), which in order to pass the model\n",
+    "    # to remote node will ray.put(model) for each task, potentially overwhelming\n",
+    "    # the local object store and causing out-of-disk error.\n",
+    "    result_refs.append(make_prediction.remote(model_ref, data))\n",
+    "\n",
+    "results = ray.get(result_refs)\n",
+    "\n",
+    "\n",
+    "# Let's check prediction output size.\n",
+    "for r in results:\n",
+    "    console.print(f\"Predictions: {r}\", style=\"bold red\")"
+   ]
   },
   {
    "cell_type": "code",
@@ -320,7 +380,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ray job submit --address http://localhost:<dashboard-port> --working-dir . -- python my_script.py"
+    "ray job submit --address http://localhost:8265 --working-dir . -- python deploy.py"
    ]
   },
   {
