chore: Update README

--- a/notebook/PyTorchLightning/03-checkpointing.ipynb
+++ b/notebook/PyTorchLightning/03-checkpointing.ipynb
@@ -162,19 +162,19 @@
     "\n",
     "        # Forward prop\n",
     "        logits: torch.Tensor = self(features)\n",
-    "        predited_labels: torch.Tensor = torch.argmax(logits, dim=1)\n",
+    "        predicted_labels: torch.Tensor = torch.argmax(logits, dim=1)\n",
     "\n",
     "        # Compute loss\n",
     "        loss: torch.Tensor = F.cross_entropy(logits, true_labels)\n",
     "\n",
-    "        return loss, true_labels, predited_labels\n",
+    "        return loss, true_labels, predicted_labels\n",
     "\n",
     "    def training_step(self, batch, batch_idx) -> torch.Tensor:\n",
     "        # Shared steps\n",
-    "        loss, true_labels, predited_labels = self._shared_steps(batch=batch)\n",
+    "        loss, true_labels, predicted_labels = self._shared_steps(batch=batch)\n",
     "\n",
     "        # Compute accuracy\n",
-    "        self.train_accuracy(true_labels, predited_labels)\n",
+    "        self.train_accuracy(true_labels, predicted_labels)\n",
     "\n",
     "        # Log loss and accuracy\n",
     "        self.log(\"train_loss\", loss)\n",
@@ -190,10 +190,10 @@
     "\n",
     "    def validation_step(self, batch, batch_idx) -> torch.Tensor:\n",
     "        # Shared steps\n",
-    "        loss, true_labels, predited_labels = self._shared_steps(batch=batch)\n",
+    "        loss, true_labels, predicted_labels = self._shared_steps(batch=batch)\n",
     "\n",
     "        # Compute accuracy\n",
-    "        self.val_accuracy(true_labels, predited_labels)\n",
+    "        self.val_accuracy(true_labels, predicted_labels)\n",
     "\n",
     "        # Log loss and accuracy\n",
     "        self.log(\"val_loss\", loss)\n",
@@ -209,10 +209,10 @@
     "\n",
     "    def test_step(self, batch, batch_idx) -> torch.Tensor:\n",
     "        # Shared steps\n",
-    "        loss, true_labels, predited_labels = self._shared_steps(batch=batch)\n",
+    "        loss, true_labels, predicted_labels = self._shared_steps(batch=batch)\n",
     "\n",
     "        # Compute accuracy\n",
-    "        self.test_accuracy(true_labels, predited_labels)\n",
+    "        self.test_accuracy(true_labels, predicted_labels)\n",
     "\n",
     "        # Log accuracy\n",
     "        self.log(\"test_accuracy\", self.test_accuracy)\n",
@@ -480,7 +480,7 @@
     "\n",
     "callbacks: list[Any] = [\n",
     "    ModelCheckpoint(\n",
-    "        save_top_k=3,  # save top k models based on monitor metric\n",
+    "        save_top_k=3,  # save top k models based on monitored metric\n",
     "        monitor=\"val_accuracy\",  # monitor quantity for model checkpointing\n",
     "        mode=\"max\",  # use \"max\" or \"min\". i.e save the model with the best monitored quantity\n",
     "        save_last=True,  # whether to save last model\n",
