chore: Add plotting module

--- a/notebook/Micro_grad_11/01-lab.ipynb
+++ b/notebook/Micro_grad_11/01-lab.ipynb
@@ -338,7 +338,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# pip install graphviz or brew install graphviz\n",
+    "# pip install graphviz or conda install graphviz\n",
     "# Copied!!!\n",
     "from graphviz import Digraph\n",
     "\n",
